tests/snapshots/tests__insta@attr_tests.coff.snap
---
source: tests/tests.rs
expression: "DebugPrint::visit(&ast, Some(&rodeo), None, None, None)"

---
#[attr1(), attr2('(' Identifier '{' '}' Int ')')]fun test ()  {
	
}
#[Err: Expected token ']'.]fun test ()  {
	
}
