tests/snapshots/tests__insta@basic.coff.snap
---
source: tests/tests.rs
expression: "DebugPrint::visit(&ast, Some(&rodeo), None, Some(&vars), None)"

---
fun fn0@X (arg0@0 : T@X, arg1@1 : T@X)  {
	(let var0@2 = #0)
	(var0@2 = $arg0@0)
	{
		(arg0@0 = #1)
		(let arg0@3 = #2)
		(arg0@3 = #3)
	}
	(arg0@0 = #4)
	(let var1@4 = #5)
	(var1@4 = #6)
	(let var1@5 = #7)
	(var1@5 = #8)
	(arg0@0 = #9)
}
fun fn1@X (arg2@6 : T@X)  {
	(let var1@7 = #0)
	(var1@7 = ($var1@7 + #1))
	(let var1@8 = ($var1@7 + #1))
	(var1@8 = ($var1@8 + #1))
}
