tests/snapshots/tests__insta@expr_parsing.coff.snap
---
source: tests/tests.rs
expression: "DebugPrint::visit(&ast, Some(&rodeo), None, None, None)"

---
fun a ()  {
	((#1 + #2) - (#3 ** #4))
	(#5 - ((#6 / #7) % #8))
	((#1 * #2) * #3)
	(#1 ** (#2 ** #3))
}
