tests/snapshots/tests__insta@fun_params.coff.snap
---
source: tests/tests.rs
expression: "DebugPrint::visit(&ast, Some(&rodeo), None, None, Some(&types), Some(errors0))"

---
fun asd (a : int, b : int)  {
	(a = #3: int): void
	(b = #5: int): void
}: void

===
