tests/snapshots/tests__insta@let_and_ident.coff.snap
---
source: tests/tests.rs
expression: "DebugPrint::visit(&ast, Some(&rodeo), None, None, None)"

---
fun a ()  {
	(let asd = #123)
	(let mut fgh = (#345 + $asd))
	{
		Err: Expected token Identifier.
	}
	{
		Err: Expected token '='.
	}
	{
		(let mut asd = Err: Expected prefix token.)
	}
}
