tests/snapshots/tests__insta@multiple_functions_one_error.coff.snap
---
source: tests/tests.rs
expression: "DebugPrint::visit(&ast, Some(&rodeo), None, None, None, Some(errors))"

---
fun d ()  {
	#2
}
Err
fun asd ()  {
	#3
}

===
Expected token Identifier. [26..27]
