tests/snapshots/tests__insta@parameter_and_return_test.coff.snap
---
source: tests/tests.rs
expression: "DebugPrint::visit(&ast, Some(&rodeo), None, None, None, Some(errors))"

---
fun asd (parm1 : Tt1, param2 : Tt2) -> i32 {
	
}

===
