tests/snapshots/tests__insta@simple_function.coff.snap
---
source: tests/tests.rs
expression: "DebugPrint::visit(&ast, Some(&rodeo), None, None, None)"

---
fun asd ()  {
	(#2 + #3)
	#2
}
