tests/snapshots/tests__insta@types.coff.snap
---
source: tests/tests.rs
expression: "DebugPrint::visit(&ast, Some(&rodeo), None, None, Some(&types))"

---
fun a ()  {
	(let a = #3: int): void
	(let b = ($a: int + #5: int): int): void
	(let c = {
		($a: int + $b: int): int
	}: int): void
	(let d = {
		(a = $b: int): void
	}: void): void
}: void
